v3:
- Fixed overflow table admin cookie, account, checkacc
- Updated alfafile.net, filefactory.com, depositfiles.com, yunfile.com, katfile.com, catshare.net, turbobit.net, rapidgator.net
v2:
- Small bugs fixed
v1:
- First release v3.2 Dev